# FilterLib

./: README.md
Android/FilterLib/app/: CMakeLists.txt  build.gradle
Android/FilterLib/app/src/androidTest/java/sy/filterlib/: ExampleInstrumentedTest.java
Android/FilterLib/app/src/main/: AndroidManifest.xml
Android/FilterLib/app/src/main/cpp/: FLJNI.cpp  FLJNI.h  com_jnirenderer_RendererJNI.cpp  com_jnirenderer_RendererJNI.h  native-lib.cpp
Android/FilterLib/app/src/main/cpp/RenderFramework/Base/: GLBase.h  LogBase.h
Android/FilterLib/app/src/main/cpp/RenderFramework/FrameBufferObject/: GLFrameBufferObject.cpp  GLFrameBufferObject.h
Android/FilterLib/app/src/main/cpp/RenderFramework/Render/: GLRender.cpp  GLRender.h  GLRenderFirst.cpp  GLRenderFirst.h  GLRenderLast.cpp  GLRenderLast.h  GLRenderSys.cpp  GLRenderSys.h  GLRenderYUV.cpp  GLRenderYUV.h
Android/FilterLib/app/src/main/cpp/RenderFramework/Shader/: YUVNV21toRGBA_fs.glsl  YUVNV21toRGBA_vs.glsl  default_fs.glsl  default_vs.glsl  green_fs.glsl  green_vs.glsl  red_fs.glsl
Android/FilterLib/app/src/main/cpp/RenderFramework/Texture/: GLTextureData.cpp  GLTextureData.h
Android/FilterLib/app/src/main/cpp/RenderFramework/Utils/: FrameBufferObjectUtils.cpp  FrameBufferObjectUtils.h  ShaderUtils.cpp  ShaderUtils.h  TextureUtils.cpp  TextureUtils.h
Android/FilterLib/app/src/main/cpp/ThirdPartyLibrary/: phead.cpp  phead.h
Android/FilterLib/app/src/main/cpp/Tracker/: Tracker.cpp  Tracker.h
Android/FilterLib/app/src/main/java/sy/filterlib/: FLActivity.java  FLCamera.java  FLGLSurfaceView.java  FLJNI.java  GLRenderSys.java  GLRenderSysGLContext.java  GLRenderSysListener.java  GLSurfaceViewActivity.java  MainActivity.java  RendererJNI.java
Android/FilterLib/app/src/main/res/layout/: activity_fl.xml  activity_glsurface_view.xml  activity_main.xml
Android/FilterLib/app/src/test/java/sy/filterlib/: ExampleUnitTest.java
iOS/FilterLib/FilterLib/: ._AppDelegate.h  ._AppDelegate.m  ._Info.plist  ._OpenGLESView.h  ._OpenGLESView.m  ._ViewController.h  ._ViewController.m  AppDelegate.h  AppDelegate.m  OpenGLESView.h  OpenGLESView.m  ViewController.h  ViewController.m  main.m
iOS/FilterLib/FilterLib.xcodeproj/: project.pbxproj
iOS/FilterLib/FilterLibTests/: FilterLibTests.m
iOS/FilterLib/FilterLibUITests/: FilterLibUITests.m
(+86 files in other folders)
